fix overflow on testimonials

--- a/_css/layout/_sections.scss
+++ b/_css/layout/_sections.scss
@@ -1191,6 +1191,9 @@ body {
 
   .section__testimonial {
     padding-top: 4rem;
+    .orbit-container {
+      overflow: visible;
+    }
   }
 
   .block-bg-text {
